--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.8",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@hookform/resolvers": "^3.1.0",
     "@mantine/carousel": "^6.0.9",
     "@mantine/core": "^6.0.9",
     "@mantine/dates": "^6.0.9",
@@ -35,8 +36,10 @@
     "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
